270 - Jump Links - fixing a few minor bugs

--- a/styleguide/source/assets/scss/03-organisms/_jump-links.scss
+++ b/styleguide/source/assets/scss/03-organisms/_jump-links.scss
@@ -49,7 +49,7 @@
       display: none;
     }
 
-    @media ($bp-medium-max) {
+    @media ($bp-small-max) {
       left: 0;
 
       &:before {
@@ -133,12 +133,6 @@
       line-height: 1.2;
       padding: 10px 15px;
 
-      @media ($bp-medium-min) {
-        display: block;
-        padding: 0;
-        padding-bottom: 12px;
-      }
-
       &.is-active, {
         display: block;
       }
@@ -151,6 +145,5 @@
         }
       }
     }
-
   }
 }
